--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,19 +54,23 @@ jobs:
           name: Build Output
           path: ${{ steps.build.outputs.build-output }}
 
-  draft:
-    name: Draft Release
+  release:
+    name: Release Version
     runs-on: ubuntu-latest
     needs: ['package']
 
     steps:
-      - name: Find Version (mod.json) and Changelog (changelog.md)
+      - name: Find Version
         id: version
-        run: echo version=$(jq -r .version mod.json) >> $GITHUB_OUTPUT
+        run: |
+          curl -s https://raw.githubusercontent.com/${{ github.repository }}/better-draft/mod.json -o mod.json
+          echo version=$(jq -r .version mod.json) >> $GITHUB_OUTPUT
 
-      - name: Find Changelog (changelog.md)
+      - name: Find Changelog
         id: changelog
-        run: echo changelog=$(awk "/## ${{ steps.version.outputs.version }}/{flag=1; next} /##/{flag=0} flag" changelog.md | sed -e :a -e '/^\n*$/{$d;N;ba}')
+        run: |
+          curl -s https://raw.githubusercontent.com/${{ github.repository }}/better-draft/changelog.md -o changelog.md
+          echo changelog=$(awk "/## ${{ steps.version.outputs.version }}/{flag=1; next} /##/{flag=0} flag" changelog.md | sed -e :a -e '/^\n*$/{$d;N;ba}') >> $GITHUB_OUTPUT
 
       - name: Download Build Output
         uses: actions/download-artifact@v4
@@ -74,7 +78,7 @@ jobs:
           name: Build Output
           path: build-output
 
-      - name: Create Draft Release
+      - name: Release Version
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -82,6 +86,6 @@ jobs:
           files: |
             build-output/*.geode
             build-output/*.pdb
-          tag_name: ${{ github.event.head_commit.message }}
-          name: ${{ github.event.head_commit.message }}
+          tag_name: ${{ steps.version.outputs.version }}
+          name: ${{ steps.version.outputs.version }}
           body: ${{ steps.changelog.outputs.changelog }}
