--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,10 +60,11 @@ jobs:
     needs: ['package']
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Find Version
         id: version
         run: |
-          curl -s https://raw.githubusercontent.com/${{ github.repository }}/master/mod.json -o mod.json
           echo version=$(jq -r .version mod.json) >> $GITHUB_OUTPUT
 
       - name: Check Existing Release
@@ -82,9 +83,12 @@ jobs:
         if: steps.check.outputs.release == '1'
         id: changelog
         run: |
-          curl -s https://raw.githubusercontent.com/${{ github.repository }}/master/changelog.md -o changelog.md
-          echo -e changelog=$(awk "/## ${{ steps.version.outputs.version }}/{flag=1; next} /##/{flag=0} flag" changelog.md \
-            | sed -e :a -e '/^\n*$/{$d;N;ba}' | sed ':a;N;$!ba;s/\n/\\n/g') >> $GITHUB_OUTPUT
+          CHANGELOG=$(awk "/## ${{ steps.version.outputs.version }}/{flag=1; next} /##/{flag=0} flag" changelog.md | sed -e :a -e '/^\n*$/{$d;N;ba}')
+          {
+            echo "changelog<<EOF"
+            echo "$CHANGELOG"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
 
       - name: Download Build Output
         if: steps.check.outputs.release == '1'
