--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,56 +55,13 @@ jobs:
           path: ${{ steps.build.outputs.build-output }}
 
   release:
-    name: Release Version
+    name: Release the mod
     runs-on: ubuntu-latest
     needs: ['package']
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Find Version
-        id: version
-        run: |
-          echo version=$(jq -r .version mod.json) >> $GITHUB_OUTPUT
-
-      - name: Check Existing Release
-        id: check
-        run: |
-          RELEASE=$(gh release view ${{ steps.version.outputs.version }} --repo ${{ github.repository }} --json tagName || true)
-          if [ -z "$RELEASE" ]; then
-            echo "No release found for ${{ steps.version.outputs.version }}, continuing with release"
-            echo release=1 >> $GITHUB_OUTPUT
-          else
-            echo "Release found for ${{ steps.version.outputs.version }}, skipping release"
-            echo release=0 >> $GITHUB_OUTPUT
-          fi
-
-      - name: Find Changelog
-        if: steps.check.outputs.release == '1'
-        id: changelog
-        run: |
-          CHANGELOG=$(awk "/## ${{ steps.version.outputs.version }}/{flag=1; next} /##/{flag=0} flag" changelog.md | sed -e :a -e '/^\n*$/{$d;N;ba}')
-          {
-            echo "changelog<<EOF"
-            echo "$CHANGELOG"
-            echo "EOF"
-          } >> $GITHUB_OUTPUT
-
-      - name: Download Build Output
-        if: steps.check.outputs.release == '1'
-        uses: actions/download-artifact@v4
+      - uses: hiimjustin000/release-geode-mod@main
         with:
-          name: Build Output
-          path: build-output
-
-      - name: Release Version
-        if: steps.check.outputs.release == '1'
-        uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: |
-            build-output/*.geode
-            build-output/*.pdb
-          tag_name: ${{ steps.version.outputs.version }}
-          body: ${{ steps.changelog.outputs.changelog }}
+          token: ${{ secrets.GITHUB_TOKEN }}
